# student-manager

./: .gitignore  CMakeLists.txt  README.md  student-list.c
db/: CMakeLists.txt  student-db.c  student-db.h  test.db
db/random_db/: package.json
db/random_db/src/: index.js
